# ocaml-data-transform-test

./: .gitignore  .ocamlformat  README.md  dune-project  ocaml_data_transform.opam
lib/: dune  example_mappings.ml  example_mappings.mli  json_path.ml  json_path.mli  mappings.ml  mappings.mli  schema.ml  schema.mli  transform_utils.ml  transform_utils.mli
proto/: data_types.proto  data_types_constants.json  table_schema.proto  table_schema_constants.json
proto/tables/: source_table.proto  source_table_constants.json  target_table.proto  target_table_constants.json
test/: dune  test_example_mappings.ml  test_integration.ml  test_json_path.ml  test_main.ml  test_mappings.ml  test_protobuf.ml  test_schema.ml  test_transform_utils.ml
test/fixtures/: transformed_values.json  values.json
