(library
 (name ocaml_data_transform)
 (libraries yojson re pbrt pbrt_yojson))

; Generate OCaml from data_types.proto
; Note: ocaml-protoc has a yojson codegen bug with map<> fields —
; it emits "assoc :=" instead of "assoc := (" before let bindings.
(rule
 (targets data_types.ml data_types.mli)
 (deps ../proto/data_types.proto)
 (action
  (progn
   (run ocaml-protoc --binary --yojson --ml_out=. %{deps})
   (run sed -i "" "s/assoc :=$/assoc := (/" data_types.ml))))

; Generate OCaml from table_schema.proto
; Note: ocaml-protoc has a yojson codegen bug with map<> fields —
; it emits "assoc :=\n  let assoc_field" instead of "assoc := (\n  let assoc_field".
; The sed step patches the missing opening paren.
(rule
 (targets table_schema.ml table_schema.mli)
 (deps ../proto/table_schema.proto ../proto/data_types.proto)
 (action
  (progn
   (run ocaml-protoc --binary --yojson -I ../proto --ml_out=. ../proto/table_schema.proto)
   (run sed -i "" "s/assoc :=$/assoc := (/" table_schema.ml))))

; Generate OCaml from source_table.proto
(rule
 (targets source_table.ml source_table.mli)
 (deps ../proto/tables/source_table.proto ../proto/data_types.proto)
 (action
  (run ocaml-protoc --binary --yojson -I ../proto --ml_out=. ../proto/tables/source_table.proto)))

; Generate OCaml from target_table.proto
(rule
 (targets target_table.ml target_table.mli)
 (deps ../proto/tables/target_table.proto ../proto/data_types.proto)
 (action
  (run ocaml-protoc --binary --yojson -I ../proto --ml_out=. ../proto/tables/target_table.proto)))
